# feed-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  util.rs
src/integrations/: discord.rs
src/source/: archaeologynews.rs  bbcfuture.rs  bbcinpictures.rs  mod.rs  naturenews.rs  photosoftheday.rs  sciencenews.rs  subreddit.rs  weekinwildlife.rs
