[package]
name = "feed-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aarch64 = "0.0.14"
chrono = { version="0.4.44", features = ["serde"] }
reqwest = { version="0.13.2", default-features = false, features=["default-tls", "json"] }
scraper = "0.26.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
toolchain = "0.1.0-alpha.1"
